--- a/Laboratorium_1.ipynb
+++ b/Laboratorium_1.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:aac9136852eb5266549424d875f47c07e8884cefe39785f282de1c498d59cceb"
+  "signature": "sha256:1e29ac20fca4d6e36fc78206fcad35010858f38685bb7056db61db161cacd7ff"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,11 +43,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Tututut \\n de\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Tututut \n",
+        " de\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -65,11 +76,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts 'utututut \\n ko'"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "utututut \\v ko\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "heading",
@@ -89,10 +110,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"siedze \\nsobie \\nna zaj\u0119ciach\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "siedze \n",
+        "sobie \n",
+        "na zaj\u0119ciach\n"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -112,10 +146,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"\\\"napis? \\n napis !\\\"\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\"napis? \n",
+        " napis ! \"\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -143,11 +189,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "ju = \"p\u00f3\u017ano\"\n",
+      "puts \"#{ju} ju\u017c \""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 18
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "p\u00f3\u017ano ju\u017c \n"
+       ]
+      }
+     ],
+     "prompt_number": 51
     },
     {
      "cell_type": "markdown",
@@ -165,11 +222,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "imie = \"Aniu\"\n",
+      "puts \"Witaj \" + imie"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj Aniu\n"
+       ]
+      }
+     ],
+     "prompt_number": 52
     },
     {
      "cell_type": "markdown",
@@ -190,11 +258,31 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "imie = \"Aniu\"\n",
+      "puts \"Witaj \" + imie\n",
+      "liczba = 2\n",
+      "puts \"Witaj #{liczba}\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj Aniu\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -213,10 +301,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "liczba = 2\n",
+      "puts \"Witaj \" + liczba.to_s"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
@@ -237,10 +337,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "liczba = 2\n",
+      "puts \"Witaj #{liczba}\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Witaj 2\n"
+       ]
+      }
+     ],
+     "prompt_number": 55
     },
     {
      "cell_type": "heading",
@@ -260,10 +372,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Wynik dzielenia 777 przez 11 to:.. #{777.0/11}\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Wynik dzielenia 777 przez 11 to:.. 70.63636363636364\n"
+       ]
+      }
+     ],
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -306,11 +429,40 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "tekst = <<END_OF_STRING\n",
+      "Remember those walls I built?\n",
+      "Well, baby they're tumbling down\n",
+      "And they didn't even put up a fight\n",
+      "They didn't even make a sound\n",
+      "I found a way to let you in\n",
+      "But, I never really had a doubt\n",
+      "Standing in the light of your halo\n",
+      "I got my angel now\n",
+      "END_OF_STRING\n",
+      "\n",
+      "puts tekst"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 37
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Remember those walls I built?\n",
+        "Well, baby they're tumbling down\n",
+        "And they didn't even put up a fight\n",
+        "They didn't even make a sound\n",
+        "I found a way to let you in\n",
+        "But, I never really had a doubt\n",
+        "Standing in the light of your halo\n",
+        "I got my angel now\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -342,10 +494,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Ala \" \" kota \\n\" * 3"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Ala  kota \n",
+        "Ala  kota \n",
+        "Ala  kota \n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 57
     },
     {
      "cell_type": "heading",
@@ -377,11 +543,46 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "spacja = \" \"\n",
+      "pal = \"-\"\n",
+      "puts \"+#{pal*8}+\"\n",
+      "2.times{ puts \"|#{spacja*8}|\"}\n",
+      "puts \"+#{pal*8}+\""
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "+--------+\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "|        |\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "|        |\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "+--------+\n"
+       ]
+      }
+     ],
+     "prompt_number": 70
     },
     {
      "cell_type": "markdown",
@@ -398,7 +599,10 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "napis = \"ala\"\n",
+      "napis = "
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -418,10 +622,23 @@
     {
      "cell_type": "code",
      "collapsed": true,
-     "input": [],
+     "input": [
+      "tekst = \"Remember those walls I built? \"\n",
+      "tekst += \"Well, baby they're tumbling down\"\n",
+      "puts tekst"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Remember those walls I built? Well, baby they're tumbling down\n"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "markdown",
@@ -436,11 +653,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \"Liczba %.2f\" % 3.567891"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Liczba 3.57\n"
+       ]
+      }
+     ],
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -467,10 +694,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "puts \" %.3f\" % 1.55555555"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 1.556\n"
+       ]
+      }
+     ],
+     "prompt_number": 46
     }
    ],
    "metadata": {}
