--- a/Laboratorium_2.ipynb
+++ b/Laboratorium_2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:651f5da808b224edca5384a68d4e493dea47ac77dd0b7022c5afd0db52dd15c3"
+  "signature": "sha256:f28980c16acbab16dc46eab176779b14bd3a6924b560e3dc232ead9bb546a4f9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -42,11 +42,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\".empty?\n",
+      "\"kot ma ale\".empty?"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "false"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -66,11 +78,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Lodz\".bytesize"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "4"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -91,12 +114,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "string = \"\u2500\"\n"
+      "string = \"-\"\n",
+      "string.bytesize"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 13,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -115,11 +148,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\".encode(\"cp1250\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 14,
+       "text": [
+        "\"\\xA3\\xF3d\\x9F\""
+       ]
+      }
+     ],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -137,10 +181,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"paczka\".index(\"a\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -157,10 +213,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[0]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 17,
+       "text": [
+        "\"\u0141\""
+       ]
+      }
+     ],
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -175,10 +243,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[0..1]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 20,
+       "text": [
+        "\"\u0141\u00f3\""
+       ]
+      }
+     ],
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -194,10 +274,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\"[-2..-1]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "\"d\u017a\""
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "heading",
@@ -219,12 +311,23 @@
      "collapsed": false,
      "input": [
       "url = \"http://pl.wikipedia.org/wiki/Polska\"\n",
-      "# tutaj wstaw sw\u00f3j kod"
+      "url.rindex(\"\\/\")\n",
+      "url.size\n",
+      "url[29..35]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "\"Polska\""
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "heading",
@@ -248,10 +351,134 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Warszawa\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "\"WARSZAWA\""
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `zmq_recvmsg'"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        ": "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "Interrupt"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `__recvmsg__'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:321:in `recvmsg'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:342:in `recv_string'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/session.rb:37:in `recv'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:59:in `run'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\n"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -267,11 +494,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\u0141\u00f3d\u017a\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "\"\u0141\u00f3D\u017a\""
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -295,10 +533,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "require 'string_case_pl'\n",
+      "\"\u0141\u00f3d\u017a\".upcase"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "\"\u0141\u00d3D\u0179\""
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -314,11 +565,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"zbyt     wiele     spacji     \".squeeze(\" \")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "\"zbyt wiele spacji \""
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -333,10 +595,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"      niepotrzebne spacje          \".strip"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "\"niepotrzebne spacje\""
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -351,11 +625,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"hello \".chomp"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "\"hello \""
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -372,11 +657,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\".sub(/a/,\"o\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "\"Alo ma kota\""
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -391,10 +687,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\".gsub(/a/,\"o\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "\"Alo mo koto\""
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -417,13 +725,23 @@
      "input": [
       "napis = \"W domu by\u0142o 10 kot\u00f3w i 5 ps\u00f3w\"\n",
       "# Tutaj wstaw kod zamieniaj\u0105cy cyfry na znak x.\n",
+      "napis.gsub(/\\d+/, \"x\")\n",
       "# Rezultatem jego wywo\u0142ania powinien by\u0107 napis \"W domu by\u0142o xx kot\u00f3w oraz x ps\u00f3w\"\n",
       "# Mo\u017cesz r\u00f3wnie\u017c napisa\u0107 wyra\u017cenie, kt\u00f3rego rezultatem jest napis \"W domu by\u0142o x kot\u00f3w oraz x ps\u00f3w\""
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "\"W domu by\u0142o x kot\u00f3w i x ps\u00f3w\""
+       ]
+      }
+     ],
+     "prompt_number": 21
     },
     {
      "cell_type": "heading",
@@ -455,10 +773,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Warto\u015b\u0107 liczby to \" + 10.to_s"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 16,
+       "text": [
+        "\"Warto\u015b\u0107 liczby to 10\""
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -476,11 +806,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Warto\u015b\u0107 liczby to \" + 10.to_s(2)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 22,
+       "text": [
+        "\"Warto\u015b\u0107 liczby to 1010\""
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -497,10 +838,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"10\".to_i(2) + \"20\".to_i"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 24,
+       "text": [
+        "22"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -515,10 +868,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"1\".to_i(2)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 26,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -534,10 +899,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"1.5\".to_i"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "heading",
@@ -557,11 +934,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"AFC\".to_i(16)\n",
+      "\"2812\".to_i(8)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 46,
+       "text": [
+        "2"
+       ]
+      }
+     ],
+     "prompt_number": 46
     },
     {
      "cell_type": "markdown",
@@ -579,11 +968,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota, a kot jest psem.\".split"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 9
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "[\"Ala\", \"ma\", \"kota,\", \"a\", \"kot\", \"jest\", \"psem.\"]"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
@@ -598,11 +998,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota, \\n a kot jest persem.\".split(/\\n$/)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 38,
+       "text": [
+        "[\"Ala ma kota, \\n a kot jest persem.\"]"
+       ]
+      }
+     ],
+     "prompt_number": 38
     },
     {
      "cell_type": "heading",
@@ -622,10 +1033,23 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"\n",
+      "Wi\u0119kszo\u015b\u0107 metod dzia\u0142aj\u0105cych na \u0142a\u0144cuchach nie modyfikuje orginalnej warto\u015bci, lecz zwraca zmodyfikowan\u0105 kopi\u0119 \u0142a\u0144cucha. Wyj\u0105tkiem jest np. metoda <<, s\u0142u\u017c\u0105ca do konkatenacji. Isnieje jednak szereg metod pozwalaj\u0105cych na modyfikowanie oryginalnego \u0142a\u0144cucha znak\u00f3w. Charakteryzuj\u0105 si\u0119 one tym, \u017ce na ko\u0144cu nazwy pojawia si\u0119 wykrzyknik.\".split(/. $/)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "[\"\\nWi\u0119kszo\u015b\u0107 metod dzia\u0142aj\u0105cych na \u0142a\u0144cuchach nie modyfikuje orginalnej warto\u015bci, lecz zwraca zmodyfikowan\u0105 kopi\u0119 \u0142a\u0144cucha. Wyj\u0105tkiem jest np. metoda <<, s\u0142u\u017c\u0105ca do konkatenacji. Isnieje jednak szereg metod pozwalaj\u0105cych na modyfikowanie oryginalnego \u0142a\u0144cucha znak\u00f3w. Charakteryzuj\u0105 si\u0119 one tym, \u017ce na ko\u0144cu nazwy pojawia si\u0119 wykrzyknik.\"]"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
@@ -661,7 +1085,16 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "\"5374\""
+       ]
+      }
+     ],
      "prompt_number": 2
     },
     {
@@ -698,12 +1131,22 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "napis = \"II Klasa szko\u0142y podstawowej. Ala ma kota. To kot, a to Ala.\""
+      "napis = \"II Klasa szko\u0142y podstawowej. Ala ma kota. To kot, a to Ala.\"\n",
+      "napis.upcase.squeeze(\"I\").gsub(\"A\", \"O\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "\"I KLOSO SZKO\u0142Y PODSTOWOWEJ. OLO MO KOTO. TO KOT, O TO OLO.\""
+       ]
+      }
+     ],
+     "prompt_number": 1
     }
    ],
    "metadata": {}
