--- a/Laboratorium_4.ipynb
+++ b/Laboratorium_4.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:2bd0b97db81091dc04afd1bc061506ed5b1d97d0e3f83f0b0a2ddffdd0c84cdb"
+  "signature": "sha256:54ab0bbd7bb60fd5922e57d31c4927d3c209adc0b5a0581cc0d6cbf8b027938b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,10 +33,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "/a/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 3,
+       "text": [
+        "/a/"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -51,10 +63,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\" =~ /a/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 4,
+       "text": [
+        "2"
+       ]
+      }
+     ],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -68,10 +92,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"Ala ma kota\" =~ /x/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -88,10 +115,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "/a/.match(\"Ala ma kota\")"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "#<MatchData \"a\">"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -108,11 +147,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "matched = /a/.match(\"Ala ma kota\")\n",
+      "matched.begin(0)\n",
+      "matched.end(0)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 19
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "3"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -176,10 +228,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"a\" =~ /./"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 12,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -195,10 +259,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"a..\" =~ /\\./"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -212,10 +288,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\".\" =~ /\\./"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -230,10 +318,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"ma\u0142y\" =~ /a\u0142y|du\u017cy/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "1"
+       ]
+      }
+     ],
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -247,10 +347,22 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"du\u017cy\" =~ /ma\u0142y|du\u017cy/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 30,
+       "text": [
+        "0"
+       ]
+      }
+     ],
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -264,10 +376,13 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "\"wielki\" =~ /ma\u0142y|du\u017cy/"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -285,11 +400,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "matched = /(\\d\\d-\\d\\d\\d) (\\w+)/.match(\"00-700 Warszawa, ul. Kr\u00f3tka 5\")\n",
+      "matched[1]\n",
+      "matched[2]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 22
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "\"Warszawa\""
+       ]
+      }
+     ],
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -316,10 +444,36 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "numer = /^\\d(2)/.match(\"12 2 123 123\", \"22 23 32 654\")\n",
+      "\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "no implicit conversion of String into Integer",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[31mTypeError\u001b[0m: no implicit conversion of String into Integer",
+        "\u001b[37m<main>:in `match'\u001b[0m",
+        "\u001b[37m<main>:in `<main>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/backend.rb:8:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:110:in `execute_request'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:62:in `run'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\u001b[0m",
+        "\u001b[37m/usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\u001b[0m"
+       ]
+      }
+     ],
+     "prompt_number": 48
     },
     {
      "cell_type": "heading",
