--- a/Laboratorium_2.ipynb
+++ b/Laboratorium_2.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "ruby",
   "name": "",
-  "signature": "sha256:f28980c16acbab16dc46eab176779b14bd3a6924b560e3dc232ead9bb546a4f9"
+  "signature": "sha256:3617d8917d346bb1bff83013eae5de9eb5bad07719f0a7cedb26d96c70f63599"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -114,7 +114,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "string = \"-\"\n",
+      "string = \"\u2500\"\n",
       "string.bytesize"
      ],
      "language": "python",
@@ -123,13 +123,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 4,
        "text": [
-        "1"
+        "3"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -311,9 +311,9 @@
      "collapsed": false,
      "input": [
       "url = \"http://pl.wikipedia.org/wiki/Polska\"\n",
-      "url.rindex(\"\\/\")\n",
-      "url.size\n",
-      "url[29..35]"
+      "size = url.size\n",
+      "ciach = url.rindex(\"/\")\n",
+      "url[ciach+1..size]"
      ],
      "language": "python",
      "metadata": {},
@@ -321,13 +321,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 30,
+       "prompt_number": 20,
        "text": [
         "\"Polska\""
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 20
     },
     {
      "cell_type": "heading",
@@ -360,125 +360,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 2,
        "text": [
         "\"WARSZAWA\""
        ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "/usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `zmq_recvmsg'"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        ": "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "Interrupt"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:584:in `__recvmsg__'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:321:in `recvmsg'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/ffi-rzmq-2.0.1/lib/ffi-rzmq/socket.rb:342:in `recv_string'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/session.rb:37:in `recv'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/kernel.rb:59:in `run'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:30:in `run_kernel'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/lib/iruby/command.rb:16:in `run'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/gems/iruby-0.1.13/bin/iruby:6:in `<top (required)>'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `load'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/iruby:23:in `<main>'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `eval'\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "\tfrom /usr/local/rvm/gems/ruby-2.0.0-p0/bin/ruby_noexec_wrapper:14:in `<main>'\n"
-       ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -935,8 +823,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "\"AFC\".to_i(16)\n",
-      "\"2812\".to_i(8)"
+      "a = \"AFC\".to_i(16)\n",
+      "a.to_s(8)"
      ],
      "language": "python",
      "metadata": {},
@@ -944,13 +832,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 46,
+       "prompt_number": 21,
        "text": [
-        "2"
+        "\"5374\""
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -1082,20 +970,50 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "napis = \"Janek\"\n",
+      "nowy_napis = napis.downcase\n",
+      "puts nowy_napis\n",
+      "puts napis\n",
+      "\n",
+      "napis = \"Janek\"\n",
+      "nowy_napis = napis.downcase!\n",
+      "puts nowy_napis\n",
+      "puts napis"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 2,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "\"5374\""
+        "janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "janek\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "janek\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
